--- a/app/views/pacientes/_escala_participacao.html.erb
+++ b/app/views/pacientes/_escala_participacao.html.erb
@@ -19,7 +19,7 @@
         <td><%= escala_part.data_entrevista %></td>
         <td><%= escala_part.entrevistador %></td>
         <td><%= escala_part.total %></td>
-        <td><%= escala_part.grau_restricao %></td>
+        <td><%= grau(escala_part.grau_restricao) %></td>
       </tr>
   <% end %>
   </tbody>
