--- a/app/views/pacientes/show.html.erb
+++ b/app/views/pacientes/show.html.erb
@@ -116,6 +116,20 @@
     </div>
   </div>
 
+  <div class="row">
+    <div class="card">
+      <div class="card-content">
+        <span class="card-title">Escalas de Salsa</span>
+        <%= render partial: "escala_salsa", locals: {escala_salsas: @paciente.escala_salsas} %>
+      </div>
+
+      <div class="card-action">
+        <a href="/escala_salsas/new?paciente=<%= @paciente.id %>">Nova Entrevista</a>
+      </div>
+
+    </div>
+  </div>
+
 
 
 </div>
