--- a/app/views/imunizacao_solicitacaos/show.html.erb
+++ b/app/views/imunizacao_solicitacaos/show.html.erb
@@ -139,7 +139,7 @@
         <% imunobiologico.imunizacao_esquemas.each do |esquema| %>
             <div class="card-panel">
               <div class="row">
-                <div class="col s12 m4">
+                <div class="col s12 m4 " style="text-transform: uppercase">
                   <b>Dose:</b><br>
                   <%= esquema.dose %>
                 </div>
