--- a/app/views/imunizacao_solicitacaos/index.html.erb
+++ b/app/views/imunizacao_solicitacaos/index.html.erb
@@ -31,7 +31,7 @@
         <td><%= link_to imunizacao_solicitacao.nome_paciente,imunizacao_solicitacao %></td>
         <td><%= imunizacao_solicitacao.created_at %></td>
         <td><%= imunizacao_solicitacao.municipio_atual %></td>
-        <td><%= imunizacao_solicitacao.status %></td>
+        <td><%= imunizacao_solicitacao.status_text %></td>
       </tr>
   <% end %>
   </tbody>
