--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,8 +15,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="msapplication-tap-highlight" content="no">
   <meta name="description" content="Junte seus pontos">
-  <meta name="keywords" content="programa de pontos, fidelidade, ">
-  <title>Vigilância Sanitária | <%=  @namespace  %></title>
+  <title>Projeto OPAS</title>
   <link href="https://fonts.googleapis.com/css?family=Kavivanar" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="/js/idletimer/dist/idle-timer.min.js"></script>
