--- a/app/views/pacientes/_notificacoes.html.erb
+++ b/app/views/pacientes/_notificacoes.html.erb
@@ -23,7 +23,7 @@
           <% if notificacao.recidiva_id.present? %>
             <%= link_to "Recidiva", recidiva_path(notificacao.recidiva) %>
           <% else %>
-              <%= link_to "Avaliação", avaliacao_notificacao_path(notificacao.avaliacao_notificacao) %>
+              <%#= link_to "Avaliação", avaliacao_notificacao_path(notificacao.avaliacao_notificacao) %>
           <% end %>
         </td>
 
