alteraçoes menu usuario

--- a/app/views/dant_pacients/_form.html.erb
+++ b/app/views/dant_pacients/_form.html.erb
@@ -65,7 +65,7 @@
 
   <div class="input-field">
 
-    <%= f.label :frascos_diarios %>
+    <%= f.label :frascos_diarios, "Dose Diária" %>
     <%= f.number_field :frascos_diarios, step: 1, required: true %>
     
   </div>
