--- a/app/views/dant_pacients/index.html.erb
+++ b/app/views/dant_pacients/index.html.erb
@@ -21,7 +21,7 @@
     <th>Nome</th>
     <th>Cidade</th>
     <th>Idade</th>
-    <th>Frascos diarios</th>
+    <th>Doses diárias</th>
     <th>Frascos mensais</th>
     <th>Tipo insulina</th>
 
