--- a/app/views/dant_pacients/show.html.erb
+++ b/app/views/dant_pacients/show.html.erb
@@ -62,7 +62,7 @@
   <div class="row">
     <div class="col s12 l3">
       <p>
-        <strong>Frascos diários:</strong>
+        <strong>Doses diárias:</strong>
         <%= @dant_pacient.frascos_diarios %>
       </p>
     </div>
