--- a/app/views/layouts/_left_sidebar_default.html.erb
+++ b/app/views/layouts/_left_sidebar_default.html.erb
@@ -99,7 +99,7 @@
 
 
             <li class="bold">
-              <a href="/users" class="waves-effect waves-cyan">
+              <a href="/usuario/users" class="waves-effect waves-cyan">
                 <i class="fa fa-users"></i> Usuários
               </a>
             </li>
