--- a/app/views/dant_requests/show.html.erb
+++ b/app/views/dant_requests/show.html.erb
@@ -20,6 +20,14 @@
     <%= @dant_request.status.upcase %>
   </p>
 
+  <% if @dant_request.status == "deferido" %>
+      <p>
+        <strong>O Relatório Trimestral foi DEFERIDO. <br>
+          Leve a Guia de Requisição na DANT/ANEXO I para a liberação de insulinas.
+        </strong>
+      </p>
+  <% end %>
+
   <% if @dant_request.status == "indeferido" %>
     <p>
       <strong>Indeferimento:</strong>
