--- a/app/views/layouts/_left_sidebar_dst.html.erb
+++ b/app/views/layouts/_left_sidebar_dst.html.erb
@@ -37,7 +37,7 @@
             <i class="material-icons">assignment</i> Solicitação
           </a>
         </li>
-        <% if !current_user.admin_dst? %>
+        <% if !current_user.admin_dst?  %>
           <li class="bold">
             <a href="/dst/dst_produtos" class="waves-effect waves-cyan">
               <i class="material-icons">shopping_basket</i> Produtos
@@ -56,6 +56,13 @@
             <li class="bold">
               <a href="/dst/dst_solicitacao_produtos" class="waves-effect waves-cyan">
                 <i class="material-icons">assignment_turned_in</i> Analises
+              </a>
+            </li>
+        <% end %>
+        <% if current_user.administrador? || current_user.admin_dst? %>
+            <li class="bold">
+              <a href="/usuario/users" class="waves-effect waves-cyan">
+                <i class="material-icons">supervisor_account</i> Usuários
               </a>
             </li>
         <% end %>
