--- a/app/views/layouts/_left_sidebar_usuario.html.erb
+++ b/app/views/layouts/_left_sidebar_usuario.html.erb
@@ -23,37 +23,30 @@
           </a>
         </li>
         <li class="bold">
-          <a href="/dant/dant_pacients" class="waves-effect waves-cyan">
-            <i class="material-icons">people</i> Pacientes
+          <a href="/notificacaos/home" class="waves-effect waves-cyan">
+            <i class="material-icons">colorize</i> Hanseníase
           </a>
         </li>
         <li class="bold">
           <a href="/dant/dant_requests" class="waves-effect waves-cyan">
-            <i class="material-icons">assignment</i> Solicitações
+            <i class="material-icons">format_list_bulleted</i> Dant
           </a>
         </li>
         <li class="bold">
-          <a href="/dant/dant_responsavel_programs" class="waves-effect waves-cyan">
-            <i class="material-icons">supervised_user_circle</i> Responsáveis
+          <a href="/dst/dst_solicitacaos" class="waves-effect waves-cyan">
+            <i class="material-icons">format_list_bulleted</i> DST
           </a>
         </li>
-        <% if current_user.administrador? || current_user.admin_dant? %>
-            <li class="bold">
-              <a href="/dant/dant_regions" class="waves-effect waves-cyan">
-                <i class="material-icons">place</i> Regiões
-              </a>
-            </li>
-          <li class="bold">
-            <a href="/dant/dant_questions" class="waves-effect waves-cyan">
-              <i class="material-icons">contact_support</i> Perguntas
-            </a>
-          </li>
-          <li class="bold">
-            <a href="/usuario/users" class="waves-effect waves-cyan">
-              <i class="material-icons">supervisor_account</i> Usuários
-            </a>
-          </li>
-        <% end %>
+        <li class="bold">
+          <a href="/imunizacao/imunizacao_solicitacaos" class="waves-effect waves-cyan">
+            <i class="material-icons">format_list_bulleted</i> Imunização
+          </a>
+        </li>
+        <li class="bold">
+          <a href="/usuario/users" class="waves-effect waves-cyan">
+            <i class="material-icons">format_list_bulleted</i> Usuários
+          </a>
+        </li>
     <% end %>
 
   </ul>
