dant campos readonly

--- a/app/views/dant_requests/show.html.erb
+++ b/app/views/dant_requests/show.html.erb
@@ -1,9 +1,10 @@
 <div class="card-panel">
 
   <% if @dant_request.status == "deferido" %>
-      <h3 class="center-align">O Relatório Trimestral foi DEFERIDO.</h3> <br>
-          <h3 class="center-aligng">Leve a Guia de Requisição na DANT/ANEXO I para a liberação de insulinas.</h3>
-      
+      <div class="card-panel small white-text green">
+      <h3 class="center-align">O Relatório Trimestral foi DEFERIDO.</h3>
+          <h3 class="center-align">Leve a Guia de Requisição na DANT/ANEXO I para a liberação de insulinas.</h3>
+      </div>
   <% end %>
 
   <p>
