--- a/app/views/dant_requests/index.html.erb
+++ b/app/views/dant_requests/index.html.erb
@@ -9,9 +9,15 @@
     <div id="pesquisa" class="not-show">
       <%= search_form_for @q, url: request.env['PATH_INFO'] do |f|  %>
           <div class="row">
-            <div class="col l6 s12">
+            <div class="col l3 s12">
               <%= f.label "Mês" %>
               <%= f.select :mes_eq, [["MARÇO" , 3],["JUNHO" , 6],["SETEMBRO" , 9],["DEZEMBRO" , 12]],prompt: true %>
+
+            </div>
+
+            <div class="col l3 s12">
+              <%= f.label "Ano" %>
+              <%= f.select :ano_eq, DantRequest.distinct.pluck(:ano),prompt: true %>
 
             </div>
             <div class="col l6 s12">
