--- a/app/views/imunizacao_solicitacaos/index.html.erb
+++ b/app/views/imunizacao_solicitacaos/index.html.erb
@@ -1,13 +1,26 @@
 <h1 class="center-align">Requisições de Imunobiológicos Especiais</h1>
-<div class="card">
+<div class="card" style="overflow: visible;">
   <div class="card-content">
     <span class="card-title grey-text text-darken-4" onclick="toogle_div('#pesquisa')">
       Pesquisa
     </span>
-    <div id="pesquisa" class="not-show">
+    <div id="pesquisa" class="not-show row">
       <%= search_form_for @q, url: request.env['PATH_INFO'] do |f|  %>
           <%= f.text_field :nome_paciente_or_nome_mae_or_status_or_municipio_atual_nome_cont, placeholder: "Pesquisar..." %>
+        <div class="col s12 l6">
+          <%= f.label :created_at_gteq, "Data da Solicitação (Início)" %>
+          <%= f.text_field :created_at_gteq, class:"datetimepicker" %>
+        </div>
+        <div class="col s12 l6">
+          <%= f.label :created_at_lteq, "Data da Solicitação (Término)" %>
+          <%= f.text_field :created_at_lteq, class:"datetimepicker"%>
+        </div>
+        <div class="col s12">
+          <%= f.label :status_cont, "Status" %>
+          <%= f.select :status_cont, ImunizacaoSolicitacao.status.options, {prompt: true}  %>
+        </div>
           <%= f.submit "Filtrar", class:"btn" %>
+
       <% end %>
     </div>
   </div>
