--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -62,6 +62,7 @@
   <link href="/materialize/dist/js/plugins/fullcalendar/css/fullcalendar.min.css" type="text/css" rel="stylesheet" >
   <link href="/easy-pie/assets/lib/css/jquery.easy-pie-chart.css" type="text/css" rel="stylesheet" >
   <link href="/datetime/jquery.datetimepicker.min.css" type="text/css" rel="stylesheet" >
+  <link rel="stylesheet" href="/js/datetimepicker-master/build/jquery.datetimepicker.min.css">
   <!-- Core CSS File. The CSS code needed to make eventCalendar works -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/css/select2.min.css" rel="stylesheet" />
 
@@ -357,6 +358,7 @@ Scripts
 <script src="/datetime/jquery.datetimepicker.full.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/js/select2.min.js"></script>
 <script src="https://cloud.tinymce.com/stable/tinymce.min.js?apiKey=57ds9k02vjomihwdw5hh0zmvee7tplju9jj9ydv5urhk2lbn"></script>
+<script src="/js/datetimepicker-master/build/jquery.datetimepicker.full.min.js"></script>
 
 <!-- Toast Notification -->
 <% if flash[:notice].present? %>
@@ -383,6 +385,25 @@ Scripts
   $(document).ready(function(){
       $('.select2').select2();
   });
+
+  $('.datetimepicker').datetimepicker({
+      format:'d/m/Y H:i',
+      step:5,
+      i18n:{
+          "pt-BR":{
+              months:[
+                  'Janeiro','Fevereiro','Março','Abril',
+                  'Maio','Junho','Julho','Agosto',
+                  'Setembro','Outubro','Novembro','Dezembro',
+              ],
+              dayOfWeek:[
+                  "Dom", "Seg", "Ter", "Qua",
+                  "Qui", "Sex", "Sab",
+              ]
+          }
+      }
+  });
+  $.datetimepicker.setLocale('pt-BR');
 
 </script>
 <!--End of Tawk.to Script-->
