--- a/app/views/dant_pacients/show.html.erb
+++ b/app/views/dant_pacients/show.html.erb
@@ -60,24 +60,46 @@
   </div>
 
   <div class="row">
-    <div class="col s12 l3">
-      <p>
-        <strong>Doses diárias:</strong>
-        <%= @dant_pacient.frascos_diarios %>
-      </p>
-    </div>
-    <div class="col s12 l3">
-      <p>
-        <strong>Frascos mensais:</strong>
-        <%= @dant_pacient.frascos_mensais %>
-      </p>
+<!--    <div class="col s12 l3">-->
+<!--      <p>-->
+<!--        <strong>Doses diárias:</strong>-->
+        <%#= @dant_pacient.frascos_diarios %>
+<!--      </p>-->
+<!--    </div>-->
+<!--    <div class="col s12 l3">-->
+<!--      <p>-->
+<!--        <strong>Frascos mensais:</strong>-->
+        <%#= @dant_pacient.frascos_mensais %>
+<!--      </p>-->
+<!--    </div>-->
+    <div class="card">
+      <div class="card-content">
+        <span class="card-title"><b>Insulinas</b></span>
+          <table>
+            <thead>
+              <th>Tipo</th>
+              <th>Dose Diária</th>
+              <th>Frascos Mensais</th>
+            </thead>
+            <tbody>
+              <% @dant_pacient.dant_doses.each do |dose| %>
+                <tr>
+                  <td><%= dose.tipo_insulina.upcase %></td>
+                  <td><%= dose.dose_diaria %></td>
+                  <td><%= dose.frascos_mensais %></td>
+                </tr>
+              <% end %>
+            </tbody>
+          </table>
+      </div>
+
     </div>
   </div>
 
-  <p>
-    <strong>Tipo insulina:</strong>
-    <%= @dant_pacient.tipo_insulina %>
-  </p>
+<!--  <p>-->
+<!--    <strong>Tipo insulina:</strong>-->
+    <%#= @dant_pacient.tipo_insulina %>
+<!--  </p>-->
   <div class="row">
     <div class="col s12 l3">
       <p>
