--- a/app/views/dant_pacients/index.html.erb
+++ b/app/views/dant_pacients/index.html.erb
@@ -37,7 +37,7 @@
         <td><%= dant_pacient.idade %></td>
         <td><%= dant_pacient.frascos_diarios %></td>
         <td><%= dant_pacient.frascos_mensais %></td>
-        <td><%= dant_pacient.tipo_insulina %></td>
+        <td><%= dant_pacient.dant_doses.map{|a| a.tipo_insulina}.to_sentence.upcase %></td>
       </tr>
   <% end %>
   </tbody>
