--- a/app/views/dant_pacients/_form.html.erb
+++ b/app/views/dant_pacients/_form.html.erb
@@ -78,13 +78,13 @@
     
   </div> -->
 
-  <div class="card">
+  <div class="card" style="overflow: visible;">
     <div class="card-content">
       <span class="card-title">Insulinas</span>
       <%= f.fields_for :dant_doses do |esq| %>
         <div class="row">
           <div class="col s3">
-            <%= esq.label :tipo_insulina, "Dose Diária" %>
+            <%= esq.label :tipo_insulina, "Tipo" %>
             <%= esq.select :tipo_insulina , DantDose.tipo_insulina.options , {prompt: true},{required: true}%>
           </div>
           <div class="col s2">
