--- a/app/views/layouts/_left_sidebar_dant.html.erb
+++ b/app/views/layouts/_left_sidebar_dant.html.erb
@@ -39,6 +39,11 @@
         </li>
         <% if current_user.administrador? || current_user.admin_dant? %>
             <li class="bold">
+              <a href="/dant/dant_requests/dashboard" class="waves-effect waves-cyan">
+                <i class="material-icons">dashboard</i> Dashboard
+              </a>
+            </li>
+            <li class="bold">
               <a href="/dant/dant_regions" class="waves-effect waves-cyan">
                 <i class="material-icons">place</i> Regiões
               </a>
